--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://revolution.kunbus.com/
 
 Package: revpi-tools
 Architecture: armhf
-Depends: sosreport, python3-ftdi1, ${misc:Depends}
+Depends: sosreport, python3-ftdi1, iproute2, ${misc:Depends}
 Description: Revolution Pi tools
  Assorted tools and support files for Revolution Pi products:
  .
