--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Standards-Version: 3.9.8
 Build-Depends: debhelper (>=9), dh-exec, libftdi1-dev
 Maintainer: KUNBUS GmbH <support@kunbus.com>
-Homepage: https://revolution.kunbus.com/
+Homepage: https://revolutionpi.com
 
 Package: revpi-tools
 Architecture: armhf
