--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://revolutionpi.com
 
 Package: revpi-tools
 Architecture: any
-Depends: sosreport, python3-ftdi1, iproute2, ${misc:Depends}
+Depends: sosreport, python3-ftdi1, iproute2, python3-revpi-device-info, ${misc:Depends}
 Description: Revolution Pi tools
  Assorted tools and support files for Revolution Pi products:
  .
