Move example code to examples-watchdog/
Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 
 project(revpi-tools)
 
-install(FILES README patch_eeprom patch_eeprom.c enable_relay_watchdog.py disable_relay_watchdog.py revpi-connect-watchdog.sh
-  DESTINATION /home/pi/connect
-)
+add_subdirectory(examples-watchdog)
 
 install(PROGRAMS pibridge-shutdown	revpi_buster_upgrade_fix_nodered.sh	revpi_buster_fix_pictory.sh revpi_buster_fixup_pkgs.py
   DESTINATION /usr/sbin
