Move systemd files to systemd/
Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(revpi-tools)
 
 add_subdirectory(examples-watchdog)
 add_subdirectory(udev)
+add_subdirectory(systemd)
 
 install(PROGRAMS pibridge-shutdown	revpi_buster_upgrade_fix_nodered.sh	revpi_buster_fix_pictory.sh revpi_buster_fixup_pkgs.py
   DESTINATION /usr/sbin
@@ -17,7 +18,3 @@ install(FILES revpi.py
   DESTINATION /usr/share/sosreport/sos/plugins
 )
 
-
-install(FILES pileft-quirks.service piright-quirks.service
-  DESTINATION /lib/systemd/system
-)
