--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,9 @@ project(revpi-tools)
 add_subdirectory(examples-watchdog)
 add_subdirectory(udev)
 add_subdirectory(systemd)
+add_subdirectory(revpi-sos)
 
 install(PROGRAMS pibridge-shutdown	revpi_buster_upgrade_fix_nodered.sh	revpi_buster_fix_pictory.sh revpi_buster_fixup_pkgs.py
   DESTINATION /usr/sbin
-)
-
-install(PROGRAMS revpi-sos
-  DESTINATION /usr/bin
-)
-
-install(FILES revpi.py
-  DESTINATION /usr/share/sosreport/sos/plugins
 )
 
