Move pibridge-shutdown to tools/
Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,5 @@ add_subdirectory(udev)
 add_subdirectory(systemd)
 add_subdirectory(revpi-sos)
 add_subdirectory(fixup)
-
-install(PROGRAMS pibridge-shutdown
-  DESTINATION /usr/sbin
-)
+add_subdirectory(tools)
 
