--- a/systemd/CMakeLists.txt
+++ b/systemd/CMakeLists.txt
@@ -1,4 +1,4 @@
-install(FILES pileft-quirks.service piright-quirks.service
+install(FILES pileft-quirks.service piright-quirks.service hdmi-disable.service
   DESTINATION /lib/systemd/system
 )
 
