Import ks8851 tools from piserial (62e65cd)
https://github.com/RevolutionPi/piserial/commit/62e65cda52f23faf54db7b0bba38a9b66832e342

Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,3 +5,11 @@ install(PROGRAMS pibridge-shutdown
 install(FILES pibridge-shutdown.8
   DESTINATION share/man/man8
 )
+
+install(PROGRAMS ks8851-set-mac
+  DESTINATION sbin
+)
+
+install(FILES ks8851-set-mac.8
+  DESTINATION share/man/man8
+)
