Import factory-reset tools from piserial (9117a7e)
https://github.com/RevolutionPi/piserial/commit/9117a7e539b4135a13678e34d404350b285d2ebc

Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(systemd)
 add_subdirectory(revpi-sos)
 add_subdirectory(fixup)
 add_subdirectory(tools)
+add_subdirectory(revpi-factory-reset)
 
