Import lan95xx tools from piserial (9159ffc)
https://github.com/RevolutionPi/piserial/commit/9159ffccedbdc5082375a0e1d5d3722d7d4c90ea

Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,10 +6,19 @@ install(FILES pibridge-shutdown.8
   DESTINATION share/man/man8
 )
 
-install(PROGRAMS ks8851-set-mac
+install(PROGRAMS ks8851-set-mac lan95xx-set-mac
   DESTINATION sbin
 )
 
 install(FILES ks8851-set-mac.8
   DESTINATION share/man/man8
 )
+
+add_custom_target(lan9514.bin ALL
+  COMMAND xxd -r lan9514.hex lan9514.bin
+  DEPENDS /usr/bin/xxd
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tools
+  VERBATIM)
+
+install(FILES lan9514.bin
+  DESTINATION /usr/share/revpi)
