--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: revpi-tools
 Section: contrib/electronics
 Priority: extra
 Standards-Version: 3.9.8
-Build-Depends: debhelper (>=9), dh-exec, libftdi1-dev
+Build-Depends: debhelper (>=9), dh-exec, libftdi1-dev, cmake, xxd
 Maintainer: KUNBUS GmbH <support@kunbus.com>
 Homepage: https://revolutionpi.com
 
