Use GNUInstallDirs cmake-module to define install location
https://cmake.org/cmake/help/v3.13/module/GNUInstallDirs.html

Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/revpi-factory-reset/CMakeLists.txt
+++ b/revpi-factory-reset/CMakeLists.txt
@@ -1,13 +1,15 @@
 install(FILES revpi-functions
-  DESTINATION /usr/share/revpi)
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi/
+)
 
 install(PROGRAMS revpi-factory-reset
-  DESTINATION sbin
+  DESTINATION ${CMAKE_INSTALL_SBINDIR}/
 )
 
 install(FILES revpi-factory-reset.sh
-  DESTINATION /etc/profile.d)
+  DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/profile.d/
+)
 
 install(FILES revpi-factory-reset.8
-  DESTINATION share/man/man8
+  DESTINATION ${CMAKE_INSTALL_MANDIR}/man8/
 )
