--- a/debian/control
+++ b/debian/control
@@ -5,15 +5,15 @@ Maintainer: KUNBUS GmbH <support@kunbus.com>
 Rules-Requires-Root: binary-targets
 Homepage: https://revolutionpi.com/
 Vcs-Browser: https://github.com/RevolutionPi/revpi-tools
-Vcs-Git: https://github.com/RevolutionPi/revpi-tools.git
+Vcs-Git: https://github.com/RevolutionPi/revpi-tools.git -b raspios/bullseye
 Build-Depends:
   cmake,
-  debhelper-compat (= 12),
+  debhelper-compat (= 13),
   dh-python,
   libftdi1-dev,
   python3-all,
   xxd
-Standards-Version: 4.3.0
+Standards-Version: 4.5.1
 
 Package: revpi-tools
 Architecture: any
