Change call of systemd-machine-id-setup
The command systemd-machine-id-setup must be the last command, which is
called in the firstboot system unit. As we designed it more modular with
various scripts, we have to move the systemd-machine-id-setup command
from the resize-fs.sh script to the last ExecStart line in the unit
file.

Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/firstboot/firstboot.service
+++ b/firstboot/firstboot.service
@@ -9,6 +9,7 @@ ConditionFirstBoot=yes
 [Service]
 Type=oneshot
 RemainAfterExit=yes
+ExecStartPost=/usr/bin/systemd-machine-id-setup
 ExecStart=/usr/share/revpi/firstboot/resize-fs.sh
 
 [Install]
