Add conflict with old webstatus version
The revpi-config script has been moved from webstatus to
revpi-tools in commit 23b5ee5. revpi-tools conflicts with webstatus
<< 1:2.1.0 to prevent installing the same file in two packages.

https://www.debian.org/doc/manuals/debian-faq/pkg-basics.en.html#depends

Signed-off-by: Ramiro Gsponer <r.gsponer@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,10 @@ Depends:
   ${python3:Depends},
   ${shlibs:Depends}
 Suggests: revpi-sos-report, avahi-daemon
-Breaks: piserial (<< 3.0.0)
+Replaces: revpi-webstatus (<< 1:2.1.0)
+Breaks:
+  piserial (<< 3.0.0),
+  revpi-webstatus (<< 1:2.1.0)
 Description: Revolution Pi tools
  Assorted tools and support files for Revolution Pi products:
  .
