Update CMakeLists for revpi-config
Signed-off-by: Ramiro Gsponer <r.gsponer@kunbus.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(avahi-services)
 add_subdirectory(examples-watchdog)
 add_subdirectory(firstboot)
 add_subdirectory(fixup)
+add_subdirectory(revpi-config)
 add_subdirectory(revpi-factory-reset)
 add_subdirectory(revpi-sos)
 add_subdirectory(systemd)
