Move EEPROM patch away from home folder
Package files must not be installed in the user's directory. Binaries
of the package are to be placed in /usr/lib instead.

Signed-off-by: Holger Jorra <h.jorra@kunbus.com>

--- a/examples-watchdog/CMakeLists.txt
+++ b/examples-watchdog/CMakeLists.txt
@@ -4,7 +4,7 @@ target_link_libraries(patch_eeprom ftdi1)
 include(GNUInstallDirs)
 
 install(TARGETS patch_eeprom
-  DESTINATION /home/pi/connect/
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/revpi-tools/
 )
 
 install(FILES README patch_eeprom.c enable_relay_watchdog.py disable_relay_watchdog.py revpi-connect-watchdog.sh
