--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,7 +6,7 @@ install(FILES pibridge-shutdown.8
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man8/
 )
 
-install(PROGRAMS ks8851-set-mac lan95xx-set-mac revpi-set-mac
+install(PROGRAMS lan78xx-set-mac lan95xx-set-mac ks8851-set-mac revpi-set-mac
   DESTINATION ${CMAKE_INSTALL_SBINDIR}/
 )
 
@@ -21,6 +21,12 @@ add_custom_target(
   DEPENDS ${XXD} ${CMAKE_SOURCE_DIR}/tools/lan9514.hex
 )
 
-install(FILES ${PROJECT_BINARY_DIR}/tools/lan9514.bin
+add_custom_target(
+  lan7800.bin ALL
+  COMMAND ${XXD} -r ${CMAKE_SOURCE_DIR}/tools/lan7800.hex ${PROJECT_BINARY_DIR}/tools/lan7800.bin
+  DEPENDS ${XXD} ${CMAKE_SOURCE_DIR}/tools/lan7800.hex
+)
+
+install(FILES ${PROJECT_BINARY_DIR}/tools/lan9514.bin ${PROJECT_BINARY_DIR}/tools/lan7800.bin
   DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi
 )
