fix: use PROGRAM instead of FILE in CMakeLists.txt for scripts
Fixes the bug that scripts were not executable when copied via CMake.

Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/firstboot/CMakeLists.txt
+++ b/firstboot/CMakeLists.txt
@@ -2,6 +2,6 @@ install(FILES firstboot.service
   DESTINATION /lib/systemd/system/
 )
 
-install(FILES resize-fs.sh
+install(PROGRAMS resize-fs.sh
   DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi/firstboot/
 )
