Move set mac and eeprom image stuff to library
With the new RevPi Connect 4 we need to add set mac and eeprom for (at least)
Microchip LAN7800. With future products, there might be even more chips to add.

In order to prevent duplication of code and make it simpler to add new chips,
introduce a library that can be included in each script.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,6 +6,10 @@ install(FILES pibridge-shutdown.8
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man8/
 )
 
+install(FILES set-mac-functions
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi/
+)
+
 install(PROGRAMS ks8851-set-mac lan95xx-set-mac
   DESTINATION ${CMAKE_INSTALL_SBINDIR}/
 )
