Add script to set MAC addresses on Connect4
The internal ethernet interface of CM4 uses a MAC of the Raspberry Pi
Trading Ltd. In order to match these addresses with casing, and
HAT-EEPROM, they need to be set during boot time.

Signed-off-by: Holger Jorra <h.jorra@kunbus.com>

--- a/udev/CMakeLists.txt
+++ b/udev/CMakeLists.txt
@@ -1,3 +1,7 @@
 install(FILES 50-revpi.rules
   DESTINATION /lib/udev/rules.d
 )
+
+install(PROGRAMS revpi_mac
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/udev
+)
