Apply GNUInstallDirs to udev rule
Since /lib is a symlink to /usr/lib this ought to work here, as well.
The /usr prefix can be set by the debianization or the user.

Signed-off-by: Holger Jorra <h.jorra@kunbus.com>

--- a/udev/CMakeLists.txt
+++ b/udev/CMakeLists.txt
@@ -1,5 +1,5 @@
 install(FILES 50-revpi.rules
-  DESTINATION /lib/udev/rules.d
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/udev/rules.d
 )
 
 install(PROGRAMS revpi_mac
