--- a/systemd/CMakeLists.txt
+++ b/systemd/CMakeLists.txt
@@ -1,3 +1,7 @@
+include(FindPkgConfig)
+pkg_check_modules(SYSTEMD REQUIRED "systemd")
+pkg_get_variable(SYSTEMD_SYSTEMUNITDIR "systemd" "systemdsystemunitdir")
+
 install(FILES pileft-quirks.service piright-quirks.service hdmi-disable.service
-  DESTINATION /lib/systemd/system
+  DESTINATION ${SYSTEMD_SYSTEMUNITDIR}
 )
