--- a/udev/CMakeLists.txt
+++ b/udev/CMakeLists.txt
@@ -1,7 +1,11 @@
+include(FindPkgConfig)
+pkg_check_modules(UDEV REQUIRED "udev")
+pkg_get_variable(UDEV_UDEVDIR "udev" "udevdir")
+
 install(FILES 50-revpi.rules
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/udev/rules.d
+  DESTINATION ${UDEV_UDEVDIR}/rules.d
 )
 
 install(PROGRAMS revpi_mac
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/udev
+  DESTINATION ${UDEV_UDEVDIR}
 )
