Add systemd, udev and pkg-config to Build-Depends
We are now using pkg-config to determine the location for the system
units and udev related files. The configuration for pkg-config for
systemd is provided by the systemd package. The same goes for udev with
the udev package.

Add systemd, udev and pkg-config to the Build-Depends otherwise the
installation of the systemd units or the udev related files will fail.

Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,10 @@ Build-Depends:
   debhelper-compat (= 13),
   dh-python,
   libftdi1-dev,
+  pkg-config,
   python3-all,
+  systemd,
+  udev,
   xxd
 Standards-Version: 4.5.1
 
