firstboot: Use pkg-config for services install path
The systemd manpage says that
"pkg-config systemd --variable=systemdsystemunitdir"
should be used to determine the correct path for the unit files. Use the
FindPkgConfig module of CMake to check for the package. This means we
will get a build time dependecy on systemd as
/usr/share/pkgconfig/systemd.pc is part of the systemd package.

Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/firstboot/CMakeLists.txt
+++ b/firstboot/CMakeLists.txt
@@ -1,5 +1,9 @@
+include(FindPkgConfig)
+pkg_check_modules(SYSTEMD REQUIRED "systemd")
+pkg_get_variable(SYSTEMD_SYSTEMUNITDIR "systemd" "systemdsystemunitdir")
+
 install(FILES firstboot.service
-  DESTINATION /lib/systemd/system/
+  DESTINATION ${SYSTEMD_SYSTEMUNITDIR}
 )
 
 install(PROGRAMS resize-fs.sh
