--- a/firstboot/firstboot.service
+++ b/firstboot/firstboot.service
@@ -3,6 +3,7 @@ Description=First Boot Wizard
 DefaultDependencies=no
 Conflicts=shutdown.target
 After=systemd-remount-fs.service
+Before=shutdown.target
 ConditionPathIsReadWrite=/etc
 ConditionFirstBoot=yes
 
