fix: Ensure that pileft and piright are brought up
The ethernet interfaces pileft and piright, which are used for gateway
communication need to be up, so piControl can initialize the communication.

Without that fix the interfaces stay down and gateways cannot be used. On older
devices without attached irq pins the pi(left|right)-quirks.service ensures
that the interfaces will be disabled if no gateway is attached (part of
revpi-tools).

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,6 +6,10 @@ install(FILES pibridge-shutdown.8
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man8/
 )
 
+install(FILES pibridge.conf
+  DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/network/interfaces.d/
+)
+
 install(PROGRAMS lan78xx-set-mac lan95xx-set-mac ks8851-set-mac revpi-set-mac
   DESTINATION ${CMAKE_INSTALL_SBINDIR}/
 )
