fix: Add dependency `whiptail` for factory-reset
`revpi-factory-reset` requires `whiptail` to be installed to work.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Depends:
   piserial (>= 3.0.0),
   python3-ftdi1,
   sudo,
+  whiptail,
   ${misc:Depends},
   ${python3:Depends},
   ${shlibs:Depends}
