chore: Add license information for REUSE
The creation date of all files isn't known as the trail ends with an
import from SVN, for example.
Instead, find the earliest reference of each file and take that as the
start copyright year.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2024 KUNBUS GmbH
+
 variables:
   # buster is based on the v2.x branch and not master
   SKIP_RELEASE_PATTERN: /buster/
