--- a/revpi-config/CMakeLists.txt
+++ b/revpi-config/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2023 KUNBUS GmbH
+
 install(PROGRAMS revpi-config
   DESTINATION ${CMAKE_INSTALL_BINDIR}/
 )
