--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2022-2023 KUNBUS GmbH
+
 install(PROGRAMS pibridge-shutdown
   DESTINATION ${CMAKE_INSTALL_SBINDIR}/
 )
