--- a/udev/CMakeLists.txt
+++ b/udev/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2022-2023 KUNBUS GmbH
+
 include(FindPkgConfig)
 pkg_check_modules(UDEV REQUIRED "udev")
 pkg_get_variable(UDEV_UDEVDIR "udev" "udevdir")
