--- a/avahi-services/revpi-ssh.service
+++ b/avahi-services/revpi-ssh.service
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 KUNBUS GmbH
+#
+# SPDX-License-Identifier: MIT
+
 <?xml version="1.0" standalone='no'?>
 <!DOCTYPE service-group SYSTEM "avahi-service.dtd">
 <service-group>
