--- a/firstboot/CMakeLists.txt
+++ b/firstboot/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2023-2024 KUNBUS GmbH
+
 include(FindPkgConfig)
 pkg_check_modules(SYSTEMD REQUIRED "systemd")
 pkg_get_variable(SYSTEMD_SYSTEMUNITDIR "systemd" "systemdsystemunitdir")
