--- a/firstboot/firstboot.service
+++ b/firstboot/firstboot.service
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2023 KUNBUS GmbH
+
 [Unit]
 Description=First Boot Wizard
 DefaultDependencies=no
