--- a/revpi-factory-reset/CMakeLists.txt
+++ b/revpi-factory-reset/CMakeLists.txt
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2022-2023 KUNBUS GmbH
+
 install(FILES revpi-functions
   DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi/
 )
