--- a/systemd/hdmi-disable.service
+++ b/systemd/hdmi-disable.service
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2022-2022 KUNBUS GmbH
+
 [Unit]
 Description=Disable HDMI
 After=multi-user.target
