--- a/systemd/pileft-quirks.service
+++ b/systemd/pileft-quirks.service
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2021-2022 KUNBUS GmbH
+
 [Unit]
 Description=PiBridge carrier check (pileft)
 Documentation=man:pibridge-shutdown(8)
