--- a/tools/pibridge.conf
+++ b/tools/pibridge.conf
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+#
+# SPDX-FileCopyrightText: 2023 KUNBUS GmbH
+
 auto pileft
 iface pileft inet manual
 
