ci: Run local pipeline only if file exists
Run local ci pipeline only if file debian/gitlab-ci.yml exists. Gitlab
rules are evaluted by first match (= OR), thus the `if` and `exists`
must be combined in one rule.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ include:
   - local: debian/gitlab-ci.yml
     rules:
       - if: $CI_COMMIT_BRANCH =~ /^(raspios|debian)\/.*/
-      - exists:
+        exists:
           - debian/gitlab-ci.yml
 
 # build the repo
