--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-upstream-branch = master
+upstream-branch = 3.x
 upstream-tag = v%(version)s
 debian-branch = raspios/bullseye
 debian-tag = raspios/%(version)s
