ci(snapshot): Don't build bullseye on master
bullseye uses the 3.x branch now instead of master. Don't build snapshot
packages for bullseye on the master branch.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@
 
 variables:
   # buster is based on the v2.x branch and not master
-  SKIP_RELEASE_PATTERN: /buster/
+  # bullseye is based on the 3.x branch
+  SKIP_RELEASE_PATTERN: /buster|bullseye/
 
 # Build a snapshot debian package from current master
 include:
