--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,10 @@
 # SPDX-FileCopyrightText: 2024 KUNBUS GmbH
 
 variables:
-  # buster is based on the v2.x branch and not master
-  SKIP_RELEASE_PATTERN: /buster/
+  # buster is based on the 2.x branch
+  # bullseye is based on the 3.x branch
+  # bookworm is based on master
+  SKIP_RELEASE_PATTERN: /buster|bookworm/
 
 # Build a snapshot debian package from current master
 include:
