--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: KUNBUS GmbH <support@kunbus.com>
 Rules-Requires-Root: binary-targets
 Homepage: https://revolutionpi.com/
-Vcs-Browser: https://github.com/RevolutionPi/revpi-tools
-Vcs-Git: https://github.com/RevolutionPi/revpi-tools.git -b raspios/bullseye
+Vcs-Browser: https://gitlab.com/revolutionpi/revpi-tools
+Vcs-Git: https://gitlab.com/revolutionpi/revpi-tools.git -b raspios/bullseye
 Build-Depends:
   cmake,
   debhelper-compat (= 13),
