ci: Add commit linting
Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>
(cherry picked from commit 906ef89fad606122e67d824960db752e5edf999c)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,3 +16,5 @@ include:
     file: "package-devel.yml"
   - project: "revolutionpi/infrastructure/ci-templates"
     file: "/reuse-lint.yml"
+  - project: "revolutionpi/infrastructure/ci-templates"
+    file: "/check-commit/lint-commit.yml"
