feat: Regenerate SSH host keys on boot
The SSH keys are assumed to be missing when first booting the system and
should be regenerated.
This is done through a systemd service that, similar to the firstboot
service, is called only on the first boot of the system.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/firstboot/CMakeLists.txt
+++ b/firstboot/CMakeLists.txt
@@ -10,6 +10,10 @@ install(FILES firstboot.service
   DESTINATION ${SYSTEMD_SYSTEMUNITDIR}
 )
 
+install(FILES regenerate-ssh-host-keys.service
+  DESTINATION ${SYSTEMD_SYSTEMUNITDIR}
+)
+
 install(PROGRAMS resize-fs.sh
   DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi/firstboot/
 )
