build: Fix man page source
The install function's sources for the man pages pointed into the source
directory, not the build directory, where it couldn't find the man pages
because they are only generated in the build directory.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -23,7 +23,7 @@ foreach(man_page IN LISTS MAN_PAGES_8)
     DEPENDS ${CMAKE_SOURCE_DIR}/tools/${man_page}.scd
   )
 
-  install(FILES ${man_page}
+  install(FILES ${PROJECT_BINARY_DIR}/${man_page}
     DESTINATION ${CMAKE_INSTALL_MANDIR}/man8/
   )
 endforeach()
