fix(deb): Depend on raspi-utils
The package 'raspi-utils' has replaced 'libraspberrypi-bin', thus
replace it in the package dependencies.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Depends:
   e2fsprogs,
   ethtool,
   iproute2,
-  libraspberrypi-bin,
+  raspi-utils,
   parted,
   piserial (>= 3.0.0),
   python3-ftdi1,
