doc(manpage): Convert manpage to scdoc format
Signed-off-by: Ahmad Arabi Katbi <a.katbi@kunbus.com>

--- a/revpi-config/CMakeLists.txt
+++ b/revpi-config/CMakeLists.txt
@@ -6,6 +6,14 @@ install(PROGRAMS revpi-config
   DESTINATION ${CMAKE_INSTALL_BINDIR}/
 )
 
-install(FILES revpi-config.1
+set(MAN_PAGE_1 revpi-config.1)
+
+add_custom_target(
+  ${MAN_PAGE_1} ALL
+  COMMAND scdoc < ${CMAKE_SOURCE_DIR}/revpi-config/${MAN_PAGE_1}.scd > ${PROJECT_BINARY_DIR}/${MAN_PAGE_1}
+  DEPENDS ${CMAKE_SOURCE_DIR}/revpi-config/${MAN_PAGE_1}.scd
+)
+
+install(FILES ${PROJECT_BINARY_DIR}/${MAN_PAGE_1}
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1/
 )
