--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,10 @@ Depends:
   ${misc:Depends},
   ${python3:Depends},
   ${shlibs:Depends}
-Suggests: revpi-sos-report, avahi-daemon
+Suggests:
+  revpi-sos-report,
+  avahi-daemon,
+  dphys-swapfile,
 Replaces: revpi-webstatus (<< 1:2.1.0)
 Breaks:
   piserial (<< 3.0.0),
