fix(firstboot): Add dependency to reboot.target in unit file
Just like the dependency on `shutdown.target`, the unit file
`firstboot.service` may not be executed in the target `reboot`.

Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/firstboot/firstboot.service
+++ b/firstboot/firstboot.service
@@ -5,9 +5,9 @@
 [Unit]
 Description=First Boot Wizard
 DefaultDependencies=no
-Conflicts=shutdown.target
+Conflicts=reboot.target shutdown.target
 After=systemd-remount-fs.service
-Before=shutdown.target
+Before=reboot.target shutdown.target
 ConditionPathIsReadWrite=/etc
 ConditionFirstBoot=yes
 
