ci: enable building edge packages
edge packages indirectly also test if building with CMake works so the
test-build-cmake job can be removed.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>
(cherry picked from commit e57a3df16f7240dab455e048f94af801fd68ade5)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ include:
   - project: "revolutionpi/infrastructure/ci-templates"
     file: "base.yml"
   - project: "revolutionpi/infrastructure/ci-templates"
-    file: "/package-snapshot-debian.yml"
+    file: "package-devel.yml"
   - project: "revolutionpi/infrastructure/ci-templates"
     file: "/reuse-lint.yml"
   - local: debian/gitlab-ci.yml
@@ -21,20 +21,3 @@ include:
       - if: $CI_COMMIT_BRANCH =~ /^(raspios|debian)\/.*/
         exists:
           - debian/gitlab-ci.yml
-
-# build the repo
-test-build-cmake:
-  image: registry.gitlab.com/revolutionpi/infrastructure/docker-images/build-container/build-container-bullseye:arm64-latest
-  tags:
-    - docker
-    - host-arm64
-  stage: build
-  script:
-    - apt update
-    - apt install -y cmake pkg-config systemd udev libftdi1-dev xxd
-    - mkdir build
-    - cd build
-    - cmake ..
-    - cmake --build .
-  rules:
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
