--- a/firstboot/CMakeLists.txt
+++ b/firstboot/CMakeLists.txt
@@ -6,6 +6,8 @@ include(FindPkgConfig)
 pkg_check_modules(SYSTEMD REQUIRED "systemd")
 pkg_get_variable(SYSTEMD_SYSTEMUNITDIR "systemd" "systemdsystemunitdir")
 
+configure_file(resize-fs.sh resize-fs.sh COPYONLY)
+
 install(FILES firstboot.service
   DESTINATION ${SYSTEMD_SYSTEMUNITDIR}
 )
